--- a/explorer.html
+++ b/explorer.html
@@ -200,7 +200,7 @@
     { url: '10. Aksara Sunda Kuno.html', label: 'Sunda Kuno', icon: 'ᮊ', cat: 'cat-lingo' },
     { url: '11. Rekonstruksi Bahasa Sunda Kuno.html', label: 'Kamus', icon: '📖', cat: 'cat-lingo' },
     { url: '12. Sunda Kuno.html', label: 'Olaxara', icon: '✒️', cat: 'cat-lingo' },
-    { url: 'Tools.html', label: 'Logic Engine', icon: '🧠', cat: 'cat-nature' },
+    { url: 'Tools.html', label: 'Logic Engine', icon: '🧠', cat: 'cat-lingo' },
     { url: '13. Kumpulan Renungan.html', label: 'Renungan', icon: '📚', cat: 'cat-edu' },
     { url: '14. Terapi Cahaya Malam.html', label: 'Terapi Sirep', icon: '🕯️', cat: 'cat-tech' },
     { url: '15. Appraisal Scanner.html', label: 'Appraisal', icon: '🔍', cat: 'cat-edu' },
@@ -356,3 +356,4 @@
     </script>
 </body>
 </html>
+
