--- a/explorer.html
+++ b/explorer.html
@@ -207,7 +207,7 @@
     { url: '16. Restorasi Pangan.html', label: 'Teknologi Pangan', icon: '🍯', cat: 'cat-edu' },
     { url: '17. Restorasi Arsitektur.html', label: 'Arsitektur', icon: '🛖', cat: 'cat-edu' },
     { url: '18. Restorasi Kesehatan.html', label: 'Tabib Digital', icon: '🌿', cat: 'cat-edu' },
-    { url: '19. Restorasi Wastra.html', label: 'Wastra Alam', icon: '🧶', cat: 'cat-human' },
+    { url: '19. Restorasi Wastra.html', label: 'Wastra Alam', icon: '🧶', cat: 'cat-nature' },
     { url: '20. Restorasi Sosial.html', label: 'Balai Warga', icon: '🤝', cat: 'cat-human' },
     { url: '21. Pustaka Peradaban.html', label: 'Leveling Diri', icon: '⏫', cat: 'cat-human' },
     { url: '23. Scanner Nilai Dasar.html', label: 'Analisa Dasar', icon: '🔍', cat: 'cat-edu' },
@@ -356,4 +356,5 @@
     </script>
 </body>
 </html>
+
 
