--- a/explorer.html
+++ b/explorer.html
@@ -156,7 +156,7 @@
                         <div class="item-icon">💾</div>
                         <div class="item-label">System (C:)</div>
                     </div>
-                    <div class="item-card" onclick="navigate('apps', 'genesis manager.html', true, null)">
+                    <div class="item-card" onclick="navigate('apps', 'cat-future', true, null)">
                         <div class="item-icon">💾</div>
                         <div class="item-label">Arsip Data (E:)</div>
                     </div>
@@ -356,6 +356,7 @@
     </script>
 </body>
 </html>
+
 
 
 
