--- a/index.html
+++ b/index.html
@@ -644,6 +644,12 @@
                     <a href="" onclick="launchApp('Bio Medic.html', 'Realitas & Masa Depan', '💊')" class="app-card cat-future">
                     <div class="app-icon">💊</div><div class="app-label">Bio Medic Hacking</div>
                 </a>
+                    <a href="Systemstabillitysettlement.html" target="_blank" class="app-card cat-future">
+                    <div class="app-icon" style="display: flex; align-items: center; justify-content: center;">
+                    <img src="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png" alt="Icon POS" style="width: 50px; height: 50px;">
+                    </div>
+                    <div class="app-label">System Stability Settlement</div>
+                </a>
                 
             </div>
 
@@ -1026,3 +1032,4 @@
     </script>
 </body>
 </html>
+
