--- a/Systemstabillitysettlement.html
+++ b/Systemstabillitysettlement.html
@@ -64,6 +64,12 @@
             <div class="file-tag">File: standardinardandirham.html</div>
         </a>
 
+        <a href="nilaidolar emas.html" class="menu-item">
+            <div class="menu-title">5. Vonis Likuidasi Ponzi (Debt + M2)</div>
+            <div class="menu-desc">Menelanjangi martabat Dolar di hadapan gunung utang $60 Triliun. Menampilkan harga 1 Oz Emas dan 1 Dirham yang sesungguhnya jika bandar dipaksa likuidasi sekarang.</div>
+            <div class="file-tag">File: nilaidolar emas.html</div>
+        </a>
+
     </div>
 
     <div class="footer">
@@ -72,4 +78,5 @@
 </div>
 
 </body>
+
 </html>
