--- a/Systemstabillitysettlement.html
+++ b/Systemstabillitysettlement.html
@@ -70,6 +70,12 @@
             <div class="file-tag">File: nilaidolar emas.html</div>
         </a>
 
+        <a href="resetgoldstandar.html" class="menu-item">
+            <div class="menu-title">7. Pertukaran Sampah Global (150 Negara)</div>
+            <div class="menu-desc">Menampilkan vonis nilai tukar jujur terhadap 150+ mata uang. Membuktikan Dolar adalah sampah yang paling ancur martabatnya karena beban utang $60T.</div>
+            <div class="file-tag">File: resetgoldstandar.html</div>
+        </a>
+
     </div>
 
     <div class="footer">
@@ -80,3 +86,4 @@
 </body>
 
 </html>
+
