--- a/Systemstabillitysettlement.html
+++ b/Systemstabillitysettlement.html
@@ -76,6 +76,18 @@
             <div class="file-tag">File: resetgoldstandar.html</div>
         </a>
 
+        <a href="nilai sisa dolar.html" class="menu-item">
+            <div class="menu-title">8. Protokol Likuidasi Total (Vonis Hangus 83%)</div>
+            <div class="menu-desc">Menampilkan vonis akhir bahwa 83% saldo bank Anda telah hangus menjadi debu kertas. Menyediakan protokol evakuasi 30/70 untuk menyelamatkan sisa nilai riil Anda dari kebangkrutan sistem.</div>
+            <div class="file-tag">File: nilai sisa dolar.html</div>
+        </a>
+
+        <a href="autoconverter.html" class="menu-item">
+            <div class="menu-title">9. Auto Converter Global (QTY USD Real-Time)</div>
+            <div class="menu-desc">Kalkulator otomatis untuk menghitung nilai "jujur" saldo USD Anda di 150+ negara. Mengonversi angka halusinasi di layar bank menjadi timbangan emas murni berdasarkan vonis Ponzi $60T.</div>
+            <div class="file-tag">File: autoconverter.html</div>
+        </a>
+
     </div>
 
     <div class="footer">
@@ -86,4 +98,5 @@
 </body>
 
 </html>
+
 
