Update nilai sisa dolar.html

--- a/nilai sisa dolar.html
+++ b/nilai sisa dolar.html
@@ -67,7 +67,7 @@
     </div>
 
     <div class="footer-note">
-        📢 <span style="color:#ffcc00; font-weight:bold;">VONIS AKHIR:</span> 📢<br>
+        <span style="color:#ffcc00; font-weight:bold;">VONIS AKHIR:</span><br>
         1. Beban <span style="color:#ff0000">$60,89T</span> telah merampok <span style="color:#ff0000">83%</span> martabat uang Anda.<br>
         2. Martabat 1 USD resmi dibusukkan menjadi hanya <span style="color:#00ffcc">0,0010 Gram</span> emas.<br>
         3. <span style="color:#00ffcc">70% Ekuitas Riil</span> adalah sisa "daging" yang harus Anda selamatkan sebelum bandar menutup pintu bank selamanya [cite: 2026-01-21].
@@ -104,4 +104,5 @@
     calculateVonis();
 </script>
 </body>
+
 </html>
